--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="media-query.css">
     <link rel="stylesheet" href="fontes.css">
     <link rel="stylesheet" href="editor.css">
+    <link rel="shortcut icon" type="imagex/png" href="fotos_croche/icon_Karacol.png">
 </head>
 <body>
     <nav id="nav-lateral">
