--- a/amigurumi/index.html
+++ b/amigurumi/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../fonteees/fontes.css">
     <link rel="stylesheet" href="../editor.css">
     <link rel="shortcut icon" type="imagex/png" href="../fotos_croche/icon_Karacol.png">
+    
 </head>
 <body>
     <script src="java.js"></script>
@@ -85,31 +86,31 @@
         <div class="espaco">
             <div class="conteudo">
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_gata.jpg" alt="gato"></div>
+                    <div class="icon"><img src="../fotos_croche/ami_gata.png" alt="almofagata"></div>
                     <span>Almofagata</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Personagem de desenho infantil, feita com fio ecologico. (preço varia pelo tamanho) </p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 150 a 170 (20cm)</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_tartle.jpg" alt="caquin"></div>
+                    <div class="icon"><img src="../fotos_croche/ami_tartle.jpg" alt="tartaruga"></div>
                     <span>Tartaruga</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Mini Tartaruga fofa para dar de presente, feita com fio ecologico<br>(aceito tamanhos maiores)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 20,00</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_fin.jpg" alt="cue"></div>
-                    <span>Fin</span>
+                    <div class="icon"><img src="../fotos_croche/ami_dino.png" alt="dinossauro"></div>
+                    <span>Dinossauro</span>
                     <div id="descricao">
                         <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
                     </div>
                     <h3>R$ 500,00</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_jake.jpg" alt="dino"></div>
+                    <div class="icon"><img src="../fotos_croche/ami_jake.png" alt="dino"></div>
                     <span>Jake</span>
                     <div id="descricao">
                         <p>Tua mae aquela </p>
@@ -118,7 +119,7 @@
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_coelho.png" alt="dino"></div>
-                    <span>Cuelho</span>
+                    <span>Coelho</span>
                     <div id="descricao">
                         <p>Eu te amo muito karol</p>
                     </div>
@@ -133,31 +134,39 @@
                     <h3>R$ 500,00</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
+                    <div class="icon"><img src="../fotos_croche/ami_cacto.png" alt="dino"></div>
+                    <span>Mini Cacto</span>
                     <div id="descricao">
                         <p>quero te encher de riqueza</p>
                     </div>
                     <h3>R$ 500,00</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
+                    <div class="icon"><img src="../fotos_croche/ami_fin.png" alt="dino"></div>
+                    <span>Fin</span>
                     <div id="descricao">
                         <p>quero te encher de riqueza</p>
                     </div>
                     <h3>R$ 500,00</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
+                    <div class="icon"><img src="../fotos_croche/ami_naninha.png" alt="dino"></div>
+                    <span>Naninha</span>
                     <div id="descricao">
                         <p>quero te encher de riqueza</p>
                     </div>
                     <h3>R$ 500,00</h3>
                 </section><section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
+                    <div class="icon"><img src="../fotos_croche/ami_terco.png" alt="dino"></div>
+                    <span>Terco de Porta</span>
+                    <div id="descricao">
+                        <p>quero te encher de riqueza</p>
+                    </div>
+                    <h3>R$ 500,00</h3>
+                </section>
+                </section><section class="cards">
+                    <div class="icon"><img src="../fotos_croche/ami_ursoazul.png" alt="dino"></div>
+                    <span>Urso Bluberry</span>
                     <div id="descricao">
                         <p>quero te encher de riqueza</p>
                     </div>
