--- a/bolsas/index.html
+++ b/bolsas/index.html
@@ -85,7 +85,7 @@
         <div class="espaco">
             <div class="conteudo">
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_gata.jpg" alt="gato"></div>
+                    <div class="icon"><img src="../fotos_croche/bolsa_bag.png" alt="gato"></div>
                     <span>Almofagata</span>
                     <div id="descricao">
                         <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
@@ -93,7 +93,7 @@
                     <h3>R$ 500,00</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_tartle.jpg" alt="caquin"></div>
+                    <div class="icon"><img src="../fotos_croche/bolsa_laco.png" alt="caquin"></div>
                     <span>Tartaruga</span>
                     <div id="descricao">
                         <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
@@ -101,7 +101,7 @@
                     <h3>R$ 500,00</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_fin.jpg" alt="cue"></div>
+                    <div class="icon"><img src="../fotos_croche/bolsa_malha.png" alt="cue"></div>
                     <span>Fin</span>
                     <div id="descricao">
                         <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
@@ -109,7 +109,7 @@
                     <h3>R$ 500,00</h3>
                 </section>
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_jake.jpg" alt="dino"></div>
+                    <div class="icon"><img src="../fotos_croche/bolsa_verde.png" alt="dino"></div>
                     <span>Jake</span>
                     <div id="descricao">
                         <p>Tua mae aquela </p>
