--- a/contatos/index.html
+++ b/contatos/index.html
@@ -79,5 +79,20 @@
             <img src="../fotos_croche/logo.png" alt="">
         </div>
     </header>
+    <main>
+        <div id="fundo">
+            <img width="190px" height="auto" src="../fotos_croche/bonequita 1.png" alt="">
+        </div>
+        <div class="zap">
+            <div class="insta">
+                <p>Karacol_croche</p>
+                <a href="#"><img src="../fotos_croche/insta.png" alt=""></a>
+            </div>
+            <div class="insta">
+                <p>Karacol_croche 2</p>
+                <a href="#"><img src="../fotos_croche/insta.png" alt=""></a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
