--- a/contatos/index.html
+++ b/contatos/index.html
@@ -86,11 +86,19 @@
         <div class="zap">
             <div class="insta">
                 <p>Karacol_croche</p>
-                <a href="#"><img src="../fotos_croche/insta.png" alt=""></a>
+                <a href="https://www.instagram.com/karacol_croche?utm_source=qr&igsh=MXF3cGs1cWJwM3NnMw==" target="_blank"><img src="../fotos_croche/insta.png" alt=""></a>
             </div>
             <div class="insta">
                 <p>Karacol_croche 2</p>
-                <a href="#"><img src="../fotos_croche/insta.png" alt=""></a>
+                <a href="https://www.instagram.com/karacol_croche2?utm_source=qr&igsh=MXZxdDZub2Zwc2RpZg==" target="_blank"><img src="../fotos_croche/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="zap">
+            <div class="insta">
+                <a href="https://wa.me/qr/BD7TQXNRHA33P1" target="_blank"><img src="../fotos_croche/zap.png" alt=""></a>
+            </div>
+            <div class="insta">
+                <a href="https://www.tiktok.com/@karacol_croche?_t=8lcNLiIkN2z&_r=1" target="_blank"><img src="../fotos_croche/tik.png" alt=""></a>
             </div>
         </div>
     </main>
