--- a/amigurumi/index.html
+++ b/amigurumi/index.html
@@ -89,15 +89,15 @@
                     <div class="icon"><img src="../fotos_croche/ami_gata.png" alt="almofagata"></div>
                     <span>Almofagata</span>
                     <div id="descricao">
-                        <p>Personagem de desenho infantil, feita com fio ecologico. (preço varia pelo tamanho) </p>
+                        <p>Personagem do desenho infantil "Casa da Gabi", feita com fio ecológico.<br>(<Strong>IMAGEM ILUSTRATIVA!</Strong><BR>Preço varia pelo tamanho) </p>
                     </div>
                     <h3>R$ 150 a 170 (20cm)</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_tartle.jpg" alt="tartaruga"></div>
-                    <span>Tartaruga</span>
+                    <span>Tartaruga </span>
                     <div id="descricao">
-                        <p>Mini Tartaruga fofa para dar de presente, feita com fio ecologico<br>(aceito tamanhos maiores)</p>
+                        <p>Mini Tartaruga fofa para dar de presente, feita com fio ecológico.<br>(Aceito tamanhos maiores)</p>
                     </div>
                     <h3>R$ 20,00</h3>
                 </section>
@@ -105,72 +105,72 @@
                     <div class="icon"><img src="../fotos_croche/ami_dino.png" alt="dinossauro"></div>
                     <span>Dinossauro</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Feito com um fio que tem um leve toque de brilho..<br>(Preço por tamanho)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 80,00 (14cm)</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_jake.png" alt="dino"></div>
                     <span>Jake</span>
                     <div id="descricao">
-                        <p>Tua mae aquela </p>
+                        <p>Personagem do desenho animado "Hora de Aventura" feito com fio ecológico.</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 50,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_coelho.png" alt="dino"></div>
-                    <span>Coelho</span>
+                    <span>Coelha Lila</span>
                     <div id="descricao">
-                        <p>Eu te amo muito karol</p>
+                        <p>Feita com fio pelúcia. Um fio super fofo e macio.<br>(Preço por tamanho)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 140,00(25cm)</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
+                    <span>Salsicha Poppy</span>
                     <div id="descricao">
-                        <p>quero te encher de riqueza</p>
+                        <p>Pequena cachorrinha salsicha, feita com fio ecológico.<br>(Aceito tamanhos maiores)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 25,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_cacto.png" alt="dino"></div>
                     <span>Mini Cacto</span>
                     <div id="descricao">
-                        <p>quero te encher de riqueza</p>
+                        <p>Feita com fio ecológico, essa pequena veio deixar o seu lar mais fofo e bonito.<br>(<strong>IMAGEM ILUSTRATIVA!</strong><BR>Aceito tamanho maiores)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 25,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_fin.png" alt="dino"></div>
                     <span>Fin</span>
                     <div id="descricao">
-                        <p>quero te encher de riqueza</p>
+                        <p>Personagem do desenho animado "Hora de Aventura". Feito com fio ecológico.</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 80,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_naninha.png" alt="dino"></div>
                     <span>Naninha</span>
                     <div id="descricao">
-                        <p>quero te encher de riqueza</p>
+                        <p>Feito com fio ecológico, essa naninha é uma ótima companheira para os pequeninos.<br>(<strong>IMAGEM ILUSTRATIVA!</strong><br>Aceito variações)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 80,00</h3>
                 </section><section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_terco.png" alt="dino"></div>
                     <span>Terco de Porta</span>
                     <div id="descricao">
-                        <p>quero te encher de riqueza</p>
+                        <p>Feito com fio ecológico, esse terçinho é lindo para colocar na sua porta.<br>(<strong>IMAGEM ILUSTRATIVA!</strong>)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 25,00</h3>
                 </section>
                 </section><section class="cards">
                     <div class="icon"><img src="../fotos_croche/ami_ursoazul.png" alt="dino"></div>
-                    <span>Urso Bluberry</span>
+                    <span>Urso Blueberry</span>
                     <div id="descricao">
-                        <p>quero te encher de riqueza</p>
+                        <p>Feito com fio pelúcia que é super macio, esse urso é ótimo para dar de presente para quem você mais gosta!</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 35,00</h3>
                 </section>
             </div>
         </div>
