--- a/contatos/index.html
+++ b/contatos/index.html
@@ -95,12 +95,23 @@
         </div>
         <div class="zap">
             <div class="insta">
-                <a href="https://wa.me/qr/BD7TQXNRHA33P1" target="_blank"><img src="../fotos_croche/zap.png" alt=""></a>
+                <a href="https://wa.me/qr/BD7TQXNRHA33P1" target="_blank"><img  src="../fotos_croche/zap.png" alt=""></a>
             </div>
             <div class="insta">
-                <a href="https://www.tiktok.com/@karacol_croche?_t=8lcNLiIkN2z&_r=1" target="_blank"><img src="../fotos_croche/tik.png" alt=""></a>
+                <a href="https://www.tiktok.com/@karacol_croche?_t=8lcNLiIkN2z&_r=1" target="_blank"><img width="100%" height="auto" src="../fotos_croche/tik.png" alt=""></a>
             </div>
         </div>
+        <div class="drt">
+            <div class="img">
+                <a href="https://www.instagram.com/karacol_croche?utm_source=qr&igsh=MXF3cGs1cWJwM3NnMw==" target="_blank"><img width="100%" height="auto" src="../fotos_croche/insta1.png" alt=""></a>
+                <a href="https://wa.me/qr/BD7TQXNRHA33P1" target="_blank"><img width="100%" height="auto" src="../fotos_croche/what1.png" alt=""></a>
+            </div>
+            <div class="img">
+                <a href="https://www.instagram.com/karacol_croche2?utm_source=qr&igsh=MXZxdDZub2Zwc2RpZg==" target="_blank"><img width="100%" height="auto" src="../fotos_croche/insta2.png" alt=""></a>
+                <a href="https://www.tiktok.com/@karacol_croche?_t=8lcNLiIkN2z&_r=1" target="_blank"><img width="100%" height="auto" src="../fotos_croche/tikimg.png" alt=""></a>
+            </div>
+        </div>
+        
     </main>
 </body>
 </html>
