--- a/decoração/index.html
+++ b/decoração/index.html
@@ -28,7 +28,7 @@
             </ul>
             <ul id="itens">
                 <li class="item">
-                    <a href="index.html">
+                    <a href="../amigurumi/index.html">
                         <span class="icon"><i class="bi bi-flower1"></i></span>
                         <span class="txt">Amigurumi</span>
                     </a>
@@ -85,85 +85,15 @@
         <div class="espaco">
             <div class="conteudo">
                 <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_gata.jpg" alt="gato"></div>
+                    <div class="icon"><img src="../fotos_croche/deco_sousflat.png" alt="almofagata"></div>
                     <span>Almofagata</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Personagem de desenho infantil, feita com fio ecologico. (preço varia pelo tamanho) </p>
                     </div>
-                    <h3>R$ 500,00</h3>
-                </section>
-                <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_tartle.jpg" alt="caquin"></div>
-                    <span>Tartaruga</span>
-                    <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
-                    </div>
-                    <h3>R$ 500,00</h3>
-                </section>
-                <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_fin.jpg" alt="cue"></div>
-                    <span>Fin</span>
-                    <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
-                    </div>
-                    <h3>R$ 500,00</h3>
-                </section>
-                <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_jake.jpg" alt="dino"></div>
-                    <span>Jake</span>
-                    <div id="descricao">
-                        <p>Tua mae aquela </p>
-                    </div>
-                    <h3>R$ 500,00</h3>
-                </section>
-                <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_coelho.png" alt="dino"></div>
-                    <span>Cuelho</span>
-                    <div id="descricao">
-                        <p>Eu te amo muito karol</p>
-                    </div>
-                    <h3>R$ 500,00</h3>
-                </section>
-                <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
-                    <div id="descricao">
-                        <p>quero te encher de riqueza</p>
-                    </div>
-                    <h3>R$ 500,00</h3>
-                </section>
-                <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
-                    <div id="descricao">
-                        <p>quero te encher de riqueza</p>
-                    </div>
-                    <h3>R$ 500,00</h3>
-                </section>
-                <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
-                    <div id="descricao">
-                        <p>quero te encher de riqueza</p>
-                    </div>
-                    <h3>R$ 500,00</h3>
-                </section>
-                <section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
-                    <div id="descricao">
-                        <p>quero te encher de riqueza</p>
-                    </div>
-                    <h3>R$ 500,00</h3>
-                </section><section class="cards">
-                    <div class="icon"><img src="../fotos_croche/ami_cachorro.png" alt="dino"></div>
-                    <span>Dog</span>
-                    <div id="descricao">
-                        <p>quero te encher de riqueza</p>
-                    </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 150 a 170 (20cm)</h3>
                 </section>
             </div>
+            
         </div>
     </main>
 </body>
