--- a/bolsas/index.html
+++ b/bolsas/index.html
@@ -86,41 +86,41 @@
             <div class="conteudo">
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/bolsa_bag.png" alt="gato"></div>
-                    <span>Almofagata</span>
+                    <span>Ecologic Bag</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Feita com fio ecológico, essa bolsa é otima para carregar coisas basicas.<br>(Aceito em cores diferentes)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 40,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/bolsa_laco.png" alt="caquin"></div>
-                    <span>Tartaruga</span>
+                    <span>Laço</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Bolsa de laço fofa para carregar coisas super basicas, usada mais em eventos chiques.<br>(Aceito cores diferentes)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 60,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/bolsa_malha.png" alt="cue"></div>
-                    <span>Fin</span>
+                    <span>Bolsa de Malha</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Bolsa feita com fio de malha super resistente. Otima para qualquer ocasião.(<strong>IMAGEM ILUSTRATIVA!</strong><BR>Aceito cores diferentes)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 160,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/bolsa_verde.png" alt="dino"></div>
-                    <span>Jake</span>
+                    <span>Mini Bolsa</span>
                     <div id="descricao">
-                        <p>Tua mae aquela </p>
+                        <p>Pequena bolsa fofa, otima para carregar poucas coisas.(<strong>IMAGEM ILUSTRATIVA!</strong><br>Aceito cores diferentes)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 60,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/pochete.png" alt="dino"></div>
-                    <span>Jake</span>
+                    <span>Pochete Candy</span>
                     <div id="descricao">
-                        <p>Tua mae aquela </p>
+                        <p>Otima para ocasiões informais e para carregar coisas basicas.(<strong>IMAGEM ILUSTRATIVA!</strong><BR>Aceito variações e cores diferentes)</p>
                     </div>
                     <h3>R$ 500,00</h3>
                 </section>
