--- a/chaveiros/index.html
+++ b/chaveiros/index.html
@@ -86,27 +86,27 @@
             <div class="conteudo">
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/cha_pintinhos.png" alt="gato"></div>
-                    <span>Almofagata</span>
+                    <span>Casal Pintinhos</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Feito com fio ecologico, esse casalzinho de pintinhos é otimo para usar junto com seu(a) parceiro(a).</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 30,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/cha_raposa.png" alt="caquin"></div>
-                    <span>Tartaruga</span>
+                    <span>Raposinha</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Feito com fio ecológico, essa raposinha vai deixar sua bolsa ou suas chaves mais fofinhas.<br>(Aceito cores diferentes)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 15,00</h3>
                 </section>
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/cha_stitch.png" alt="cue"></div>
-                    <span>Fin</span>
+                    <span>Stitch</span>
                     <div id="descricao">
-                        <p>Almofagata feita de suor fedido e lagrimas de orgulho</p>
+                        <p>Personagem do filme "Lilo e Stitch" esse chaveirinho veio para alegrar seus dias.(<Strong>IMAGEM ILUSTRATIVA!</Strong><BR>Preço abaixo não é pelos dois da foto e sim por um)</p>
                     </div>
-                    <h3>R$ 500,00</h3>
+                    <h3>R$ 17,00</h3>
                 </section>
                 
             </div>
