--- a/decoração/index.html
+++ b/decoração/index.html
@@ -86,11 +86,11 @@
             <div class="conteudo">
                 <section class="cards">
                     <div class="icon"><img src="../fotos_croche/deco_sousflat.png" alt="almofagata"></div>
-                    <span>Almofagata</span>
+                    <span>Sousplat</span>
                     <div id="descricao">
-                        <p>Personagem de desenho infantil, feita com fio ecologico. (preço varia pelo tamanho) </p>
+                        <p>Lindo sousplat para decorar sua mesa de jantar!<br>(Preço por unidade é <strong>25 reais</strong>)</p>
                     </div>
-                    <h3>R$ 150 a 170 (20cm)</h3>
+                    <h3>R$ 150,00 (6uni)</h3>
                 </section>
             </div>
             
