--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="media-query.css">
     <link rel="stylesheet" href="fontes.css">
     <link rel="stylesheet" href="editor.css">
+    <link rel="stylesheet" href="slide.css">
+    <script src="slide.js" defer></script>
     <link rel="shortcut icon" type="imagex/png" href="fotos_croche/icon_Karacol.png">
 </head>
 <body>
@@ -81,5 +83,30 @@
             <img src="fotos_croche/logo.png" alt="">
         </div>
     </header>
+    <div class="espaco">
+        <div class="essl">
+            <section class="slider">
+                <div class="slider-content">
+                    <input type="radio" name="btn-radio" id="radio1">
+                    <input type="radio" name="btn-radio" id="radio2">
+                    <div class="slide-box primeiro">
+                        <img src="fotos_croche/foto-si 1.png" alt="">
+                    </div>
+                    <div class="slide-box">
+                        <img src="fotos_croche/slide2.png" alt="">
+                    </div>
+                    <div class="nav-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                    </div>
+                    <div class="nav-manual">
+                        <label for="radio1" class="manual-btn"></label>
+                        <label for="radio2" class="manual-btn"></label>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+    <!-- <3 -->
 </body>
 </html>
