--- a/index.html
+++ b/index.html
@@ -106,6 +106,30 @@
                 </div>
             </section>
         </div>
+        <div class="noticias">
+            <div class="titulo">
+                <h1>Rapaz deu certo memo</h1>
+            </div>
+            <div class="conteudo">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae explicabo soluta commodi, deleniti placeat a saepe neque, incidunt adipisci ipsa blanditiis molestias impedit quia quo dolores mollitia eveniet nam illo.</p>
+            </div>
+        </div>
+        <div class="noticias">
+            <div class="titulo">
+                <h1>Ficou massa hein</h1>
+            </div>
+            <div class="conteudo">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae explicabo soluta commodi, deleniti placeat a saepe neque, incidunt adipisci ipsa blanditiis molestias impedit quia quo dolores mollitia eveniet nam illo.</p>
+            </div>
+        </div>
+        <div class="noticias">
+            <div class="titulo">
+                <h1>EU TE AMOOOO</h1>
+            </div>
+            <div class="conteudo">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae explicabo soluta commodi, deleniti placeat a saepe neque, incidunt adipisci ipsa blanditiis molestias impedit quia quo dolores mollitia eveniet nam illo.</p>
+            </div>
+        </div>
     </div>
     <!-- <3 -->
 </body>
