--- a/amigurumi/index.html
+++ b/amigurumi/index.html
@@ -173,6 +173,21 @@
                     </div>
                     <h3>R$ 35,00</h3>
                 </section> 
+                <section class="cards">
+                    <div class="icon"><img src="../fotos_croche/ami_s_rosa.png" alt="dino"></div>
+                    <span>Stitch Rosa</span>
+                    <div id="descricao">
+                        <p>EDITAR</p>
+                    </div>
+                    <h3>R$ 40,00</h3>
+                </section> 
+                <section class="cards">
+                    <div class="icon"><img src="../fotos_croche/ami_s_azul.png" alt="dino"></div>
+                    <span>Stitch</span>
+                    <div id="descricao">
+                        <p>EDITAR</p>
+                    <h3>R$ 40,00</h3>
+                </section> 
             </div>
         </div>
     </main>
