--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                 <h1>VIDEOS</h1>
             </div>
             <div class="conteudo">
-                <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@karacol_croche/video/7364066806606155014" data-video-id="7364066806606155014" style="max-width: 0px;min-width: 325px;" > <section> <a target="_blank" title="♬ i like the way you kiss me - Artemas" href="https://www.tiktok.com/music/i-like-the-way-you-kiss-me-7347941873543890946?refer=embed">♬ i like the way you kiss me - Artemas</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+                <video controls src="videos/video1.mp4">
+                </video>
             </div>
         </div>
     </div>
