--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <h1>Dias Das Maes</h1>
             </div>
             <div class="conteudo">
-                <img src="../KaracolCroche/fotos_croche/diadasmaes.png" alt="dia">
+                <img src="fotos_croche/diadasmaes.png" alt="dia">
             </div>
         </div>
     </div>
