--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <h1>15/05/2024</h1>
             </div>
             
-            <div class="conteudo">
+            <div class="conteudo" id="notcon">
                 <p>To muito perdida ultimamente <strong>AAAAAA</strong>...</p>
 
                 <p>Cada vez mais surge um projeto de croche novo na minha cabeca e <u>ADIVINHEM</u></p>
